--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router": "^6.12.0",
     "react-router-dom": "^6.12.0",
     "react-scripts": "5.0.1",
+    "react-youtube": "^10.1.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
