--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "svgr": "svgr -d ./src/assets/logo ./src/assets/logo/svg"
+    "svgr": "svgr -d ./src/pages/home/assets ./src/pages/home/assets/svg"
   },
   "eslintConfig": {
     "extends": [
