--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "format": "prettier --write \"**/*.+(js|jsx|json|css|md)\"",
     "svgr": "svgr -d ./src/pages/home/assets ./src/pages/home/assets/svg"
   },
   "eslintConfig": {
